@@ -15,6 +15,7 @@ Core - General
   - Change new version check to timeout after 3 seconds..
   - minor fix to the relative_time plugin.
   - Admin menu item urls can now be built from the remaining members of the object, if not specified.
+  - {content_image} and {content_module} now preserve order properly and support the priority attribute.
 
 Content Manager v1.1.4
   - Fix bulk set-non-cachable functionality.
